Commit #14: fixed day-7 submit align

--- a/day-7/main.css
+++ b/day-7/main.css
@@ -64,6 +64,8 @@ input[type="submit"]{
     color: #FFFfff;
     background-color: #110047;
     border: 0;
+    display: block;
+    margin: 0 auto;
 }
 
 #form1-submit{
